# essay-mind

./: .gitignore  Cargo.toml  LICENSE  env.sh  env.sh~  notes.txt  notes.txt~  pyproject.toml
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/essay_ecs/: Cargo.toml
crates/essay_ecs/macros/: Cargo.toml
crates/essay_ecs/macros/src/: component.rs  label.rs  lib.rs
crates/essay_ecs/src/: app.rs  builtin_param.rs  component.rs  env.rs  lib.rs  mind_ecs.rs  ptr.rs  schedule.rs  system.rs  type_info.rs  type_meta.rs
crates/essay_ecs/src/app/: app.rs  mod.rs  plugin.rs
crates/essay_ecs/src/entity/: cell.rs  column.rs  component.rs  entity.rs  entity_ref.rs  insert.rs  meta.rs  mod.rs  query.rs  row.rs  store.rs  table.rs  view.rs
crates/essay_ecs/src/fiber/: mod.rs
crates/essay_ecs/src/schedule/: mod.rs  phase.rs  preorder.rs  schedule.rs  system.rs  thread_pool.rs
crates/essay_ecs/src/store/: bundle.rs  cell.rs  column.rs  component.rs  entity.rs  entity_meta.rs  meta.rs  mod.rs  ptr.rs  row.rs  row_meta.rs  table.rs  table2.rs
crates/essay_ecs/src/system/: channel_system.rs  each_system.rs  fiber.rs  fiber_system.rs  fun_system.rs  mod.rs  param.rs  schedule.rs  state.rs  system.rs  world_fun_system.rs
crates/essay_ecs/src/systems/: channel_system.rs  fun_system.rs  mod.rs  param.rs  world_fun_system.rs
crates/essay_ecs/src/table/: cell.rs  column.rs  meta.rs  mod.rs  ptr.rs  row_meta.rs  table.rs
crates/essay_ecs/src/tests/: mod.rs  test_component.rs  test_fun_system.rs  test_type_info.rs
crates/essay_ecs/src/util/: label.rs  mod.rs
crates/essay_ecs/src/world/: cell.rs  command.rs  mod.rs  params.rs  ptr.rs  resource.rs  table.rs  type_info.rs  unsafe_world.rs  world.rs
crates/mind/: Cargo.toml
crates/mind/src/: digit.rs  gram.rs  lib.rs  topos.rs
crates/mind/src/action/: action.rs  action_group.rs  mod.rs  shared_memory.rs  tests.rs
crates/mind/src/attention/: mod.rs  task.rs
crates/mind/src/body/: body.rs  mod.rs  ui_body.rs
crates/mind/src/gram/: digit.rs  gram.rs  gram_map.rs  mod.rs  test_gram.rs
crates/mind/src/world/: mod.rs  ui_world.rs  world.rs
crates/mind/tests/: digit_test.rs  gram_test.rs  ticker_test.rs  topos_test.rs
crates/ui-audio/: Cargo.toml
crates/ui-audio/src/: buffer.rs  fft.rs  fft_wave.rs  lib.rs  ui_cpal.rs  ui_symphonia.rs
crates/ui-graphics/: Cargo.toml
crates/ui-graphics/src/: hex_tile.rs  lib.rs  main_loop.rs  plugin.rs  ui_canvas.rs  ui_graph.rs
crates/ui-graphics/src/backend/: canvas.rs  main_loop.rs  mod.rs  screen.rs  wgpu_canvas.rs
crates/ui-graphics/src/ui_canvas/: canvas.rs  mod.rs  plugin.rs  screen.rs  ui_canvas.rs  wgpu_canvas.rs  winit_loop.rs
crates/ui-graphics/src/ui_layout/: mod.rs  ui_layout.rs
crates/ui-graphics/src/ui_plot/: mod.rs  ui_figure.rs  ui_graph.rs  ui_plot.rs
crates/ui-graphics/src/winit/: mod.rs  winit_loop.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  random.rs
crates/vertebrate/: Cargo.toml
crates/vertebrate/src/: ach_attention.rs  action.rs  basal_forebrain.rs  body.rs  body_locomotion.rs  control.rs  feeding.rs  habenula.rs  habenula_giveup.rs  habenula_med.rs  label.rs  lib.rs  mid_dopamine.rs  mid_explore.rs  mid_feeding.rs  mid_locomotor.rs  mid_peptide_canal.rs  mid_peptides.rs  mid_peptides2.rs  olfactory.rs  olfactory_bulb.rs  phototaxis.rs  striatum.rs  striatum_action.rs  striatum_sense.rs  striatum_stn.rs  tectum.rs  tectum_action.rs  tectum_stn.rs  ticks.rs  tuberculum.rs  ui_body.rs  ui_body_graph.rs  ui_body_heatmap.rs  ui_body_homunculus.rs  ui_graph.rs  ui_peptide.rs  ui_world.rs  world.rs
crates/vertebrate/src/body/: body.rs  body_eat.rs  eat.rs  locomotion.rs  mod.rs  touch.rs
crates/vertebrate/src/builder/: animal.rs  mod.rs
crates/vertebrate/src/core_motive/: core_eat.rs  eat.rs  explore.rs  give_up.rs  mid_peptides.rs  mod.rs  motive.rs  persist.rs  sleep.rs  timeout.rs  wake.rs
crates/vertebrate/src/hab_taxis/: chemotaxis.rs  habenula_seek.rs  klinotaxis.rs  phototaxis.rs  taxis_vector.rs
crates/vertebrate/src/hind_brain/: avoid_place.rs  hind_avoid.rs  hind_eat.rs  hind_locomotor.rs  hind_move.rs  hind_search.rs  lateral_line.rs  lateral_line2.rs  levy_walk.rs  mod.rs  r1_thigmotaxis.rs  r1_thigmotaxis_artr.rs  r2_artr.rs  r4_startle.rs  ra_thigmotaxis.rs  random_walk.rs  rpb_avoid_place.rs  serotonin.rs  startle.rs
crates/vertebrate/src/hind_eat/: hind_eat.rs  mod.rs
crates/vertebrate/src/hind_motor/: _hind_move.rs  hind_eat.rs  hind_locomotor.rs  hind_move.rs  hind_move_levy.rs  locomotion.rs  mod.rs  move_hind.rs  move_oscillator.rs  move_search.rs  move_startle.rs  taxis_pons.rs
crates/vertebrate/src/hind_move/: _hind_move.rs  hind_move.rs  hind_move_levy.rs  mod.rs  move_hind.rs  random_walk.rs
crates/vertebrate/src/hind_sense/: lateral_line.rs  mod.rs
crates/vertebrate/src/hippocampus/: engram.rs  hippocampus.rs  mod.rs  sequence.rs
crates/vertebrate/src/hypothalamus/: eat.rs  food_zone.rs  forage.rs  hyp_locomotor.rs  mod.rs  motive.rs  sleep.rs
crates/vertebrate/src/locomotor/: chemotaxis.rs  habenula_seek.rs  mid_explore.rs  mid_locomotor.rs  mod.rs  phototaxis.rs  taxis_pons.rs
crates/vertebrate/src/macros/: mod.rs
crates/vertebrate/src/mid_brain/: action.rs  mid_locomotor.rs  mid_move.rs  mod.rs  seek.rs  seek_context.rs
crates/vertebrate/src/mid_motor/: action.rs  mid_locomotor.rs  mid_motor.rs  mod.rs  nucleus_isthmi.rs  sustain.rs  tectum.rs  teg_seek.rs  tuberculum.rs
crates/vertebrate/src/mid_move/: mid_move.rs  mod.rs  move_mid.rs  seek.rs
crates/vertebrate/src/mid_seek/: chemotaxis.rs  habenula_seek.rs  mid_locomotor.rs  mod.rs  phototaxis.rs  taxis.rs
crates/vertebrate/src/mid_taxis/: chemotaxis.rs  habenula_seek.rs  mid_locomotor.rs  mod.rs  phototaxis.rs  taxis_vector.rs
crates/vertebrate/src/mid_tectum/: mod.rs  nucleus_isthmi.rs  tectum.rs  (+1 more)
crates/world/: Cargo.toml
crates/world-plankton/: Cargo.toml
crates/world-plankton/src/: body.rs  cilia.rs  lib.rs  sense_peptide.rs  ui_body.rs  ui_world.rs  world.rs
crates/world/src/: lib.rs  world.rs
(+377 files in other folders)
