[package]
name = "essay-mind"
version = "0.1.9"
edition = "2021"
publish=false

[lib]
#name = "essaymind"
# crate-type = ["rlib", "cdylib"]
#crate-type = ["cdylib"]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
ui-graphics = { path = "./crates/ui-graphics", version = "0.0.0" }
ui-audio = { path = "./crates/ui-audio", version = "0.0.0" }
fft = { path = "./crates/fft", version = "0.0.0" }
# kira = { version="0.7" }
# symphonia = { version="0.5" }
cpal = { version="0.15" }
fundsp = { version="0.12" }

[workspace]
members = [
    "crates/*",
]

[workspace.dependencies]
ticker = { path = "./crates/ticker", version = "0.0.0" }
ui-graphics = { path = "./crates/ui-graphics", version = "0.0.0" }
