[package]
name = "essay-mind"
version = "0.1.9"
edition = "2021"
publish=false

[lib]
#name = "essaymind"
# crate-type = ["rlib", "cdylib"]
#crate-type = ["cdylib"]
#crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
cpal = { version="0.15" }
fundsp = { version="0.15" }
ui-graphics = { path = "./crates/ui-graphics", version = "0.1.0" }
ui-audio = { path = "./crates/ui-audio", version = "0.0.0" }
audio = { path = "./crates/audio", version = "0.0.0" }
mind = { path = "./crates/mind", version = "0.0.0" }
world = { path = "./crates/world", version = "0.1.0" }
#essay-ecs = { git = "https://github.com/ferg-essay/essay-ecs", version="0.1.1-dev" }
#essay-ecs-core = { git = "https://github.com/ferg-essay/essay-ecs", version="0.1.0" }
essay-ecs = { path = "../essay-ecs" }
#essay-plot = { git = "https://github.com/ferg-essay/essay-plot", version="0.1.0" }
#essay-plot-base = { git = "https://github.com/ferg-essay/essay-plot", version="0.1.0" }
essay-plot = { path = "../essay-plot" }
essay-plot-base = { path = "../essay-plot/crates/essay-plot-base" }
#gram = { path = "./crates/gram", version = "0.0.0" }
#fft = { path = "./crates/fft", version = "0.0.0" }
# kira = { version="0.7" }
# symphonia = { version="0.5" }
#egui = { version="0.22" }

[workspace]
members = [
    "crates/*",
]

[workspace.dependencies]
#gram = { path = "./crates/gram", version = "0.0.0" }
#ticker = { path = "./crates/ticker", version = "0.0.0" }
audio = { path = "./crates/audio", version = "0.0.0" }
#ui-graphics = { path = "./crates/ui-graphics", version = "0.0.0" }
