[build-system]
requires = [
  "maturin>=0.14,<0.15",
  "setuptools>=64",
]
build-backend = "maturin"

[project]
name = "essaymind"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
]

[tool.maturin]
python-source = "python"


