[package]
name = "ui-audio"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
# symphonia = { version = "0.5"}
cpal = { version="0.15" }
rustfft = { version="6.1" }
fundsp = { version="0.15" }
rand = { version="0.8" }
audio = { path = "../audio" }
mind = { path = "../mind" }

[lib]
doctest = false

