[package]
name = "ui-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
wgpu = { version = "0.16"}
winit = { version = "0.28" }
pollster = { version = "0.3" }
essay-plot-base = { git = "https://github.com/ferg-essay/essay-plot" }
essay-plot-wgpu = { git = "https://github.com/ferg-essay/essay-plot", version="0.1.1" }
essay-plot = { git = "https://github.com/ferg-essay/essay-plot" }

[lib]
doctest = false

