[package]
name = "vertebrate"
version = "0.1.17-dev"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
env_logger = { version = "0.11" }
essay-ecs = { path = "../../../essay-ecs" }
#essay-ecs = { git = "https://github.com/ferg-essay/essay-ecs", version="0.1.13" }
#essay-tensor = { git = "https://github.com/ferg-essay/essay-tensor", version="0.1.13" }
essay-tensor = { path = "../../../essay-tensor" }
#essay-ecs = { git = "https://github.com/ferg-essay/essay-ecs", version="0.1.1-dev" }
#essay-ecs-core = { git = "https://github.com/ferg-essay/essay-ecs" }
essay-plot = { path = "../../../essay-plot" }
#essay-plot = { git = "https://github.com/ferg-essay/essay-plot", version="0.1.13" }
ui-graphics = { path = "../ui-graphics" }
#essay-ecs = { git = "https://github.com/ferg-essay/essay-ecs", version="0.1.13" }

mind-macros = { path = "../macros"  }
mind-ecs = { path = "../ecs"  }
util = { path = "../util"  }
test-log = { path = "../test-log" }

[lib]
doctest = false

