[package]
name = "world-plankton"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }

# workspace dependencies
#ticker.workspace = true
#ticker = { path = "../ticker" }
#gram = { path = "../gram" }
#ticker = {version = "0.1.9"}
essay-ecs = { path = "../../../essay-ecs", version="0.1.1-dev"  }
essay-plot = { path = "../../../essay-plot"  }
essay-tensor = { git = "https://github.com/ferg-essay/essay-tensor" }
ui-graphics = { path = "../ui-graphics" }
test-log = { path = "../test-log" }

[lib]
doctest = false